# mmo_remove

./: .gitignore  app.py  main.py  pyproject.toml  start.bat
controllers/: main_controller.py
models/: edit_settings.py  video_item.py
resources/ui/: main_window.ui
services/: demucs_service.py  export_service.py  ffmpeg_service.py
utils/: signals.py
views/: base.py  main_window.py  overlay_item.py
